--- a/html-basics.html
+++ b/html-basics.html
@@ -8,11 +8,38 @@
 </head>
 <body>
     <header>
-        <h1>WackyWristbands</h1>
+        <h1>Wacky Wristbands</h1>
         <h2>The silliest accessories on the market!</h2>
     </header>
     <main>
+        <p>
+            <a href="#menu">Jump to main menu</a>
+        </p>
+        <img src="https://www.syracuse.com/resizer/ivAv9e2qcM1CXfodbHqHGWuzi4c=/1280x0/smart/advancelocal-adapter-image-uploads.s3.amazonaws.com/image.syracuse.com/home/syr-media/width2048/img/opinion/photo/0413sillyjpg-e3e7308b8ac044ae.jpg" alt="A girl wearing wacky wristbands">
+        <h2 id=menu>Main Menu</h2>
+        <p>
+            <ul>
+                <li><a href="#mission">Mission Statement</a></li>
+                <li><a href="#history">Our History</a></li>
+                <li><a href="#products">Our Products</a></li>
+            </ul>
+        </p>
 
+        <h3 id=mission>Mission Statement</h3>
+        <p>
+
+        </p>
+
+        <h3 id=history>The Zany History of Wacky Wristbands</h3>
+        <p>
+
+        </p>
+
+        <h3 id=products>Our Products</h3>
+        <p>
+
+        </p>
+    
     </main>
     <footer>
 
