--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -2,9 +2,47 @@
 <html lang="en">
 
 <head>
-
+    <link rel="stylesheet" href="style.css">
+    <title>Smartphone Assignment</title>   
 </head>
 
 <body>
-    <h1>Content goes here</h1>
+    <main>
+    <div class = "wrapper">
+        <div class="phone-screen">
+          <div class="row">
+            <div id="first" class="app"></div>
+            <div id="second" class="app"></div>
+            <div id="third" class="app"></div>
+            <div id="fourth" class="app"></div>
+          </div>
+          <div class="row">
+            <div id="fifth" class="app"></div>
+            <div id="sixth" class="app"></div>
+            <div id="seventh" class="app"></div>
+            <div id="eigth" class="app"></div>
+          </div>
+          <div class="row">
+            <div id="ninth" class="app"></div>
+            <div id="tenth" class="app"></div>
+            <div id="eleventh" class="app"></div>
+            <div id="twelth" class="app"></div>
+           </div>
+          <div class="row">
+            <div id="thirteenth" class="app"></div>
+            <div id="fourteenth" class="app"></div>
+            <div id="fifteenth" class="app"></div>
+            <div id="sixteenth" class="app"></div>
+          </div>
+          <div class="row">
+            <div id="seventeenth" class="app"></div>
+            <div id="eighteenth" class="app"></div>
+            <div id="ninteenth" class="app"></div>
+            <div id="twentieth" class="app"></div>
+          </div>
+        </div>
+      </div>
+    </main>
 </body>
+
+</html>
