--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -10,13 +10,20 @@
 </head>
 
 <body>
-<h1>Meghan Skapyak's Project Homepage</h1>
-<h2>View my Web Development 1 Projects here:</h2>
-<ul>
-    <li><a href="https://meghanskapyak.github.io/webdev1/fanpage/index.html" >Fanpage Project</a></li>
-    <li><a href="https://meghanskapyak.github.io/webdev1/loading/index.html" >Loading Page Project</a></li>
-    <li><a href="https://meghanskapyak.github.io/webdev1/geocities/index.html" >Geocities Project</a></li>
-</ul>
-
+    <section>
+        <div class="container">
+            <h1>Meghan Skapyak's Project Homepage</h1>
+            <h2>View my Web Development 1 Projects here:</h2>
+            <p>
+                <ul>
+                    <li><a href="https://meghanskapyak.github.io/webdev1/html-basics.html" >HTML Basics Project</a></li>
+                    <li><a href="https://meghanskapyak.github.io/webdev1/fanpage/index.html" >Fanpage Project</a></li>
+                    <li><a href="https://meghanskapyak.github.io/webdev1/geocities/index.html" >Geocities Project</a></li>
+                    <li><a href="https://meghanskapyak.github.io/webdev1/loading/index.html" >Loading Page Project</a></li>
+                    <li><a href="https://meghanskapyak.github.io/webdev1/geocities/index.html" >Smartphone Project</a></li>
+                </ul>
+            </p>
+        </div>
+    </section>
 </body>
 
