--- a/final/art.html
+++ b/final/art.html
@@ -14,6 +14,7 @@
 </head>
 
 <body id="artpagebackground">
+    <div id="wrapper">
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -251,6 +252,7 @@
     <footer>
 
     </footer>
+</div>
 </body>
 
                 
