--- a/final/art.html
+++ b/final/art.html
@@ -6,9 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script>
-        document.addEventListener("click", x=>0)
-    </script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +13,7 @@
     <title>Art</title>
 </head>
 
-<body id="artpagebackground">
+<body id="artpagebackground" tabindex="0">
     <div id="wrapper">
     <header>
         <nav>
