--- a/final/art.html
+++ b/final/art.html
@@ -242,7 +242,7 @@
                 <div class="container">
                     <img src="images/art/walkingtogether.JPG" alt="Abstract line art of two people walking together in the snow">
                     <div class="overlaycontainer">
-                        <div class="lastoverlay">Walking Together, 2021</div>
+                        <div class="overlay" id="lastoverlay">Walking Together, 2021</div>
                     </div>
                 </div> 
             </div>
