--- a/final/index.html
+++ b/final/index.html
@@ -24,13 +24,14 @@
 
     <main id="mainpagecontent">
         <div id="maintext">
-            <h1>Hello, I'm Meghan Skapyak</h1>
-            <h2>An interaction design student at Columbia College Chicago, with experience in video game quality assurance testing and a passion for design and art.</h2>
+            <h1 id="intro">Hello, I'm Meghan Skapyak</h1>
+            <h2 id="tagline">An interaction design student at Columbia College Chicago, with experience in video game quality assurance testing and a passion for design and art.</h2>
         </div>
         <img src="images/mainicon.png" alt="A photo of Meghan Skapyak, with single line art of a pointer, a paintbrush, a lightbulb, a pen, and a magnifying glass above it" id="mainicon">
     </main>
 
     <footer>
+        <div id="footerwrap">
         <h3>Contact me:</h3>
         <section class="contact">
             <img src="images/email.png" alt="An email icon" class="icon">
@@ -40,5 +41,6 @@
             <img src="images/instagram.png" alt="An Instagram icon" class="icon">
             <p>@mskaps.art</p>
         </section>
+        </div>
     </footer>
 </body>
