--- a/final/index.html
+++ b/final/index.html
@@ -13,7 +13,7 @@
     <title>Meghan Skapyak</title>
 </head>
 
-<body>
+<body id="home">
     <header>
         <nav>
             <a href="portfolio.html">Portfolio</a>
