--- a/final/art.html
+++ b/final/art.html
@@ -17,8 +17,10 @@
     <div id="wrapper">
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="portfolio.html" id="portfoliotext">Portfolio</a>
+            <a href="art.html">Gallery</a>
+            <a href="index.html">
+                <img src="images/spiral.png" alt="A sketch of a spiral" class="nav-image"> 
+            </a>
             <a href="resume.html">Resume</a>
         </nav>
     </header>
@@ -250,7 +252,21 @@
     </main>
 
     <footer>
-
+        <div id="footerwrap">
+            <h3>Contact me:</h3>
+            <section class="contact">
+                <a href="mailto:skapyakmeghan@gmail.com">
+                    <img src="images/email.png" alt="An email icon" class="icon"> 
+                </a>
+                <p>SkapyakMeghan@gmail.com</p>
+            </section>
+            <section class="contact">
+                <a href="https://www.instagram.com/mskaps.art/">
+                    <img src="images/instagram.png" alt="An Instagram icon" class="icon">  
+                </a>
+                <p>@mskaps.art</p>
+            </section>
+            </div>
     </footer>
 </div>
 </body>
