--- a/final/index.html
+++ b/final/index.html
@@ -16,8 +16,10 @@
 <body id="home">
     <header>
         <nav>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="art.html">Art</a>
+            <a href="art.html">Gallery</a>
+            <a href="index.html">
+                <img src="images/spiral.png" alt="A sketch of a spiral" class="nav-image"> 
+            </a>
             <a href="resume.html">Resume</a>
         </nav>
     </header>
@@ -34,11 +36,15 @@
         <div id="footerwrap">
         <h3>Contact me:</h3>
         <section class="contact">
-            <img src="images/email.png" alt="An email icon" class="icon">
+            <a href="mailto:skapyakmeghan@gmail.com">
+                <img src="images/email.png" alt="An email icon" class="icon"> 
+            </a>
             <p>SkapyakMeghan@gmail.com</p>
         </section>
         <section class="contact">
-            <img src="images/instagram.png" alt="An Instagram icon" class="icon">
+            <a href="https://www.instagram.com/mskaps.art/">
+                <img src="images/instagram.png" alt="An Instagram icon" class="icon">  
+            </a>
             <p>@mskaps.art</p>
         </section>
         </div>
