--- a/final/resume.html
+++ b/final/resume.html
@@ -109,7 +109,7 @@
                         <li>
                             <h3 class="itemtitle">Mackin Educational Resources</h3>
                             <h4>Warehouse Associate, June 2019-September 2019</h4>
-                            <ul>
+                            <ul id="points">
                                 <li>Picking and packing book orders.</li>
                                 <li>Time management critical to the position.</li>
                                 <li>Knowledge of warehouse organization software.</li>
@@ -118,7 +118,7 @@
                         <li>
                             <h3 class="itemtitle">Kamen's Art Shoppes</h3>
                             <h4>Face Painter, April 2018-October 2018</h4>
-                            <ul>
+                            <ul id="points">
                                 <li>Independent management of face painting stand.</li>
                                 <li>Marketing and customer service for young audience.</li>
                                 <li>Water-based painting skills.</li>
@@ -133,7 +133,7 @@
                         <li>
                             <h3 class="itemtitle">University of Washington Model United Nations</h3>
                             <h4>Director of Operations, September 2019-January 2021</h4>
-                            <ul>
+                            <ul id="points">
                                 <li>Diplomacy and Teamwork experience.</li>
                                 <li>Meeting and group work facilitation.</li>
                                 <li>Organizational Position within the team.</li>
@@ -143,7 +143,7 @@
                         <li>
                             <h3 class="itemtitle">Prior Lake High School Theater</h3>
                             <h4>Makeup Department Lead, September 2018-June 2019</h4>
-                            <ul>
+                            <ul id="points">
                                 <li>Leader of cosmetic production for hair and makeup.</li>
                                 <li>Creation of realistic goals for team members throughout the week.</li>
                                 <li>Facilitated teamwide daily meetings.</li>
@@ -152,7 +152,7 @@
                         <li>
                             <h3 class="itemtitle">Prior Lake High School Mock Trial</h3>
                             <h4>Varsity Witness, September 2017-June 2019</h4>
-                            <ul>
+                            <ul id="points">
                                 <li>Public speaking and collaboration on presentations.</li>
                                 <li>Community outreach.</li>
                                 <li>Mentoring less experienced team members.</li>
@@ -163,7 +163,7 @@
                         <li>
                             <h3 class="itemtitle">FIRST Robotics Team 2169</h3>
                             <h4>Business and Marketing Lead, September 2015-June 2019</h4>
-                            <ul>
+                            <ul id="points">
                                 <li>Organization and content creation for 2018 world finalist Chairman's Award submission</li>
                                 <li>Teamwide management position.</li>
                                 <li>Production and organization of large-scale multimedia projects.</li>
