--- a/final/resume.html
+++ b/final/resume.html
@@ -41,7 +41,7 @@
                     <li><p>Quality Assurance</p></li>
                 </ul>
             </div>
-            <div>
+            <div id="lastsection">
                 <div id="resumecolumn">
                     <h2 class="sectiontitle">Education</h2>
                     <hr>
