--- a/final/resume.html
+++ b/final/resume.html
@@ -171,6 +171,7 @@
                                 <li>Motivated team members to go above and beyond during outreach events. </li>
                                 <li>Email communication and marketing with team sponsors.</li>
                             </ul>
+                            <h4 id="overflowpreventiontext">This is dummy text to prevent the footer from overlapping my final lines of text on mobile. I have tried so hard at this point to find another way for hours on end, but Apple and Stack Overflow just aren't working with me here.</h4>
                         </li>
                     </ul>
                 </div>
