--- a/final/art.html
+++ b/final/art.html
@@ -249,6 +249,7 @@
                 </div> 
             </div>
           </div>
+          <h4 id="overflowpreventiontext">This is dummy text to prevent the footer from overlapping my final lines of text on mobile. I have tried so hard at this point to find another way for hours on end, but Apple and Stack Overflow just aren't working with me here.</h4>
     </main>
 
     <footer>
