--- a/final/art.html
+++ b/final/art.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- <a href="https://www.flaticon.com/free-icons/instagram" title="instagram icons">Instagram icons created by edt.im - Flaticon</a> -->
+    <!-- <a href="https://www.flaticon.com/free-icons/instagram" title="instagram icons">Instagram and email icons created by edt.im - Flaticon</a> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -256,18 +256,18 @@
     <footer>
         <div id="footerwrap">
             <h3>Contact me:</h3>
-            <section class="contact">
+            <div class="contact">
                 <a href="mailto:skapyakmeghan@gmail.com">
                     <img src="images/email.png" alt="An email icon" class="icon"> 
                 </a>
                 <p>SkapyakMeghan@gmail.com</p>
-            </section>
-            <section class="contact">
+            </div>
+            <div class="contact">
                 <a href="https://www.instagram.com/mskaps.art/">
                     <img src="images/instagram.png" alt="An Instagram icon" class="icon">  
                 </a>
                 <p>@mskaps.art</p>
-            </section>
+            </div>
             </div>
     </footer>
 </div>
