--- a/final/index.html
+++ b/final/index.html
@@ -35,19 +35,19 @@
 
     <footer>
         <div id="footerwrap">
-        <h3>Contact me:</h3>
-        <section class="contact">
-            <a href="mailto:skapyakmeghan@gmail.com">
-                <img src="images/email.png" alt="An email icon" class="icon"> 
-            </a>
-            <p>SkapyakMeghan@gmail.com</p>
-        </section>
-        <section class="contact">
-            <a href="https://www.instagram.com/mskaps.art/">
-                <img src="images/instagram.png" alt="An Instagram icon" class="icon">  
-            </a>
-            <p>@mskaps.art</p>
-        </section>
-        </div>
+            <h3>Contact me:</h3>
+            <div class="contact">
+                <a href="mailto:skapyakmeghan@gmail.com">
+                    <img src="images/email.png" alt="An email icon" class="icon"> 
+                </a>
+                <p>SkapyakMeghan@gmail.com</p>
+            </div>
+            <div class="contact">
+                <a href="https://www.instagram.com/mskaps.art/">
+                    <img src="images/instagram.png" alt="An Instagram icon" class="icon">  
+                </a>
+                <p>@mskaps.art</p>
+            </div>
+            </div>
     </footer>
 </body>
