--- a/final/resume.html
+++ b/final/resume.html
@@ -182,18 +182,18 @@
         <footer>
             <div id="footerwrap">
                 <h3>Contact me:</h3>
-                <section class="contact">
+                <div class="contact">
                     <a href="mailto:skapyakmeghan@gmail.com">
                         <img src="images/email.png" alt="An email icon" class="icon"> 
                     </a>
                     <p>SkapyakMeghan@gmail.com</p>
-                </section>
-                <section class="contact">
+                </div>
+                <div class="contact">
                     <a href="https://www.instagram.com/mskaps.art/">
                         <img src="images/instagram.png" alt="An Instagram icon" class="icon">  
                     </a>
                     <p>@mskaps.art</p>
-                </section>
+                </div>
                 </div>
         </footer>
     </div>
