--- a/final/resume.html
+++ b/final/resume.html
@@ -43,128 +43,102 @@
                 </ul>
             </div>
             <div id="lastsection">
-                <div id="resumecolumn">
+                <div class="resumecolumn">
                     <h2 class="sectiontitle">Education</h2>
                     <hr>
-                    <ul id="resumeitems">
-                        <li>
                             <h3 class="itemtitle">Columbia College Chicago</h3>
                             <h4>B.A. in Interaction Design, September 2021-Present</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Studies in Interaction Design with a concentration in Web and Mobile Development.</li>
                                 <li>Dean's List for Fall 2021 Semester.</li>
                                 <li>Additional studies in Children's Education and Culture.</li>
                                 <li>Expected to graduate May 2023.</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">University of Washington Seattle</h3>
                             <h4>B.S. in Biology, September 2019-May 2020</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Prescience Major.</li>
                                 <li>RSO Leadership.</li>
                             </ul>
-                        </li>
                             <h3 class="itemtitle">Prior Lake High School</h3>
                             <h4>High School Degree, September 2015-June 2019</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>3.8/4.0 Unweighted GPA.</li>
                                 <li>Graduated with Honors.</li>
                             </ul>
-                        </li>
-                    </ul>
                 </div>
-                <div id="resumecolumn">
+                <div class="resumecolumn">
                     <h2 class="sectiontitle">Experience</h2>
                     <hr>
-                    <ul id="resumeitems">
-                        <li>
                             <h3 class="itemtitle">Night City</h3>
                             <h4>Assistant Producer, January 2022-Present</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Ad-hoc testing of levels and reporting issues on GitHub.</li>
                                 <li>GitHub project board creation and management.</li>
                                 <li>Building and pushing mobile app versions via Unity Editor, Xcode, and Testflight.</li>
                                 <li>Manual QA testing on both mobile devices and Unity Editor</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">Columbia College Chicago</h3>
                             <h4>Student Assistant, September 2021-Present</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Organization and schedule management for the Academic Center for Tutoring.</li>
                                 <li>Communication with both clients and coworkers via email and phone.</li>
                                 <li>Problem-solving skills critical to position.</li>
                             </ul>
-                        </li>
                             <h3 class="itemtitle">Activision Blizzard</h3>
                             <h4>Functional QA Tester, August 2020-August 2021</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Ad-hoc testing of levels and reporting issues in Jira.</li>
                                 <li>Fulfillment of test plan tasks on Devtrack.</li>
                                 <li>Communication with coworkers via Slack.</li>
                                 <li>Knowledge of the software testing cycle and sprints.</li>
                                 <li>Credited on Call of Duty: Black Ops Cold War, Call of Duty: Warzone, and Call of Duty: Vanguard.</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">Mackin Educational Resources</h3>
                             <h4>Warehouse Associate, June 2019-September 2019</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Picking and packing book orders.</li>
                                 <li>Time management critical to the position.</li>
                                 <li>Knowledge of warehouse organization software.</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">Kamen's Art Shoppes</h3>
                             <h4>Face Painter, April 2018-October 2018</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Independent management of face painting stand.</li>
                                 <li>Marketing and customer service for young audience.</li>
                                 <li>Water-based painting skills.</li>
                             </ul>
-                        </li>
-                    </ul>
                 </div>
-                <div id="resumecolumn">
+                <div class="resumecolumn">
                     <h2 class="sectiontitle">Volunteering</h2>
                     <hr>
-                    <ul id="resumeitems">
-                        <li>
                             <h3 class="itemtitle">University of Washington Model United Nations</h3>
                             <h4>Director of Operations, September 2019-January 2021</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Diplomacy and Teamwork experience.</li>
                                 <li>Meeting and group work facilitation.</li>
                                 <li>Organizational Position within the team.</li>
                                 <li>MS Suite experience.</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">Prior Lake High School Theater</h3>
                             <h4>Makeup Department Lead, September 2018-June 2019</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Leader of cosmetic production for hair and makeup.</li>
                                 <li>Creation of realistic goals for team members throughout the week.</li>
                                 <li>Facilitated teamwide daily meetings.</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">Prior Lake High School Mock Trial</h3>
                             <h4>Varsity Witness, September 2017-June 2019</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Public speaking and collaboration on presentations.</li>
                                 <li>Community outreach.</li>
                                 <li>Mentoring less experienced team members.</li>
                                 <li>Understanding of both contracts and resolutions.</li>
                                 <li>Organizational position within team.</li>
                             </ul>
-                        </li>
-                        <li>
                             <h3 class="itemtitle">FIRST Robotics Team 2169</h3>
                             <h4>Business and Marketing Lead, September 2015-June 2019</h4>
-                            <ul id="points">
+                            <ul class="points">
                                 <li>Organization and content creation for 2018 world finalist Chairman's Award submission</li>
                                 <li>Teamwide management position.</li>
                                 <li>Production and organization of large-scale multimedia projects.</li>
@@ -173,8 +147,6 @@
                                 <li>Email communication and marketing with team sponsors.</li>
                             </ul>
                             <h4 id="overflowpreventiontext">This is dummy text to prevent the footer from overlapping my final lines of text on mobile. I have tried so hard at this point to find another way for hours on end, but Apple and Stack Overflow just aren't working with me here.</h4>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </main>
